logs/test/log_test_app_v9.txt
--- Iniciando procesamiento ---
Diagnóstico: 2 de 2 ítems del presupuesto encontraron su costo.
--- Procesamiento completado ---
E
======================================================================
ERROR: test_process_all_files_structure_and_calculations (__main__.TestCSVProcessor.test_process_all_files_structure_and_calculations)
Prueba la función orquestadora `process_all_files`, verificando tanto
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/Users/gerardomayor/Documents/estru_techos/apu_filter/test_app.py", line 95, in test_process_all_files_structure_and_calculations
    item1 = next(
            ^^^^^
  File "/Users/gerardomayor/Documents/estru_techos/apu_filter/test_app.py", line 96, in <genexpr>
    (item for item in presupuesto_procesado if item["Código APU"] == "1,1"),
                                               ~~~~^^^^^^^^^^^^^^
KeyError: 'Código APU'

----------------------------------------------------------------------
Ran 1 test in 0.242s

FAILED (errors=1)